Fix Layout Height Issue Without Overflow:hidden

--- a/renderer/assets/styles/global.sass
+++ b/renderer/assets/styles/global.sass
@@ -89,7 +89,6 @@ html, body, #__next
   margin: 0
   height: 100%
   background-color: rgba(0, 0, 0, 0)
-  overflow-y: hidden
 
 .bg-image
   background-image: var(--background-image)
@@ -216,3 +215,9 @@ input
   font-family: 'Orbitron', sans-serif
   padding: 10px
   outline: none
+
+.border
+  border: 2px solid var(--secondary-color)
+  padding-right: 5px
+  padding-left: 5px
+  padding-top: 5px
