--- a/renderer/assets/styles/grid.module.sass
+++ b/renderer/assets/styles/grid.module.sass
@@ -2,7 +2,7 @@
 	display: grid
 	grid-template-columns: repeat(16, minmax(0, 1fr))
 	grid-template-rows: repeat(16, 1fr)
-	grid-gap: 40px
+	column-gap: 20px
 	width:  100%
 	box-sizing: border-box
 	padding: 15px
